# DSA-TREES

./: 00_START_HERE.md  ALL_FILES_TESTED.md  CMakeLists.txt  COMPLETE_MANIFEST.md  DELIVERABLES.md  DEV4_IMPLEMENTATION.md  FINAL_VERIFICATION.md  FRONTEND_README.md  FRONTEND_SETUP.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  Makefile  PROJECT_INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_TESTING.md  README.md  START_HERE.md  TESTING_GUIDE.md  TEST_RESULTS_SUMMARY.md  run_tests.sh  test_all.bat
.github/workflows/: ci.yml
docs/: design.md  tree_theory.md  user_guide.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CodePanel.tsx  ControlPanel.tsx  PlaybackControls.tsx  QuizPanel.tsx  TreeCanvas.tsx  TreeSelector.tsx  VisualizerPanel.tsx
frontend/src/styles/: App.css
frontend/src/utils/: AVL.ts  BST.ts  ExecutionTracker.ts  RBT.ts
include/: app.h  avl.h  bst.h  quiz.h  rbt.h  visualize.h
src/: app.c  avl.c  bst.c  bst_test.c  dev1_test.c  main.c  quiz.c  rbt.c  visualize.c
tests/: test_avl.c  test_bst.c  test_rbt.c
